--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="text-center mb-5" data-aos="fade-up">
           <span class="section-badge">استكشف</span>
           <h2 class="display-4 fw-bold mb-3">استكشف عالم الذكاء الاصطناعي</h2>
-          <p class="lead text-muted">
+          <p class="lead text-muted" style="color:white">
             اختر المجال الذي يهمك وابدأ رحلتك في عالم التكنولوجيا
           </p>
         </div>
