--- a/index.html
+++ b/index.html
@@ -495,12 +495,12 @@
           <p>استكشف مستقبل التكنولوجيا معنا</p>
         </div>
         <div class="col-md-6 text-md-end">
-          <div class="social-links">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-            <a href="#"><i class="bi bi-github"></i></a>
-          </div>
+          <div class="col-md-6 text-center text-md-end">
+                    <a href="https://github.com/qaszxcv14780acii-afk/abdo" class="text-white me-3" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                    <a href="https://x.com/BdalmlkA45278" class="text-white me-3" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.facebook.com/share/15b3wd2NoPo/" class="text-white" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                </div>
+            </div>
         </div>
       </div>
       <hr class="my-3" />
