--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
       </div>
       <hr class="my-3" />
       <div class="text-center">
-        <p>&copy; 2025 عالم الذكاء الاصطناعي. جميع الحقوق محفوظة.</p>
+        <p><a href="https://qaszxcv14780acii-afk.github.io/abdo/">جميع الحقوق محفوظة عبدالملك سعد</a></p>
       </div>
     </div>
   </footer>
